Changed tab class to tidy-tab and tabs to tidy-tabs to prevent accidental targeting/integration with modules that integrate with the default sheets. Adding tabs the conventional way does not work with Tidy, so this is to cut off unintended injection.

--- a/src/scss/partials/_items.scss
+++ b/src/scss/partials/_items.scss
@@ -365,11 +365,11 @@ input[type='checkbox'] {
   }
 }
 
-.tabs {
+.tidy-tabs {
   flex: 0 0 auto;
 }
 
-.tab {
+.tidy-tab {
   overflow: hidden auto;
   height: 100%;
   align-content: flex-start;
